infrastructure/kubernetes/istio/peer-authentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: istio-system
spec:
  mtls:
    mode: STRICT
---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: policycortex-mtls
  namespace: policycortex
spec:
  mtls:
    mode: STRICT
  selector:
    matchLabels:
      app: policycortex
